--- a/scoresstyle.css
+++ b/scoresstyle.css
@@ -27,10 +27,18 @@ body {
     float: left;
 }
 
-#scoreslist {
+#blank {
     float: left;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+#scoreslist {
+    padding: 0;
+}
+
+li {
+    display: block;
 }
 
 #backbutton {
