--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 
 #content h1, p {
     text-align: center;
+    margin-bottom: 15px;
 }
 
 #quiz {
@@ -52,12 +53,15 @@ body {
 }
 
 #quiz h4 {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     text-align: left;
 }
 
 #quiz p {
     text-align: left;
+    float: left;
+    margin-right: 5px;
+    width: 100%;
 }
 
 #quiz ul {
@@ -76,13 +80,12 @@ body {
 }
 
 #quiz input {
-    margin: auto;
+    margin-right: 5px;
 }
 
 #quiz button {
     color: white;
     background-color: rgb(90, 8, 90);
-    margin: auto;
 }
 
 #quiz button:hover {
