styling and js finished

--- a/scoresstyle.css
+++ b/scoresstyle.css
@@ -43,6 +43,7 @@ li {
     display: block;
     background-color: rgb(250, 208, 250);
     margin-bottom: 10px;
+    padding-left: 5px;
 }
 
 #backbutton {
